# src/user/dto/userme-response.ts
@@ -1,0 +1,12 @@
+import { ApiProperty } from "@nestjs/swagger";
+
+export class UserMeResponse {
+    @ApiProperty()
+    id: string;
+  
+    @ApiProperty()
+    username: string;
+  
+    @ApiProperty({ type: [String] })
+    roles: string[];
+  }
