# src/user/test.controller.ts
@@ -1,0 +1,10 @@
+import { Controller, Get, HttpCode, HttpStatus } from '@nestjs/common';
+
+@Controller('test')
+export class TestController {
+  @Get('me')
+  @HttpCode(HttpStatus.OK)
+  async getMe() {
+    return {};
+  }
+} 
